--- a/LAB 5.ioc
+++ b/LAB 5.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 Dma.Request0=TIM1_CH1
-Dma.RequestsNb=1
+Dma.Request1=TIM2_CH1
+Dma.RequestsNb=2
 Dma.TIM1_CH1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.TIM1_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.TIM1_CH1.0.Instance=DMA2_Stream1
@@ -11,6 +12,16 @@ Dma.TIM1_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.TIM1_CH1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM1_CH1.0.Priority=DMA_PRIORITY_LOW
 Dma.TIM1_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM2_CH1.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM2_CH1.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM2_CH1.1.Instance=DMA1_Stream5
+Dma.TIM2_CH1.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM2_CH1.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_CH1.1.Mode=DMA_CIRCULAR
+Dma.TIM2_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM2_CH1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_CH1.1.Priority=DMA_PRIORITY_LOW
+Dma.TIM2_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -19,33 +30,39 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
 Mcu.IP4=TIM1
-Mcu.IP5=TIM11
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP5=TIM2
+Mcu.IP6=TIM5
+Mcu.IP7=TIM11
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PB3
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB3
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin17=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA2
-Mcu.Pin6=PA3
-Mcu.Pin7=PA5
-Mcu.Pin8=PA8
-Mcu.Pin9=PA13
-Mcu.PinsNb=15
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PA8
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=6.1.1
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
@@ -57,7 +74,10 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.TIM1_TRG_COM_TIM11_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -132,7 +152,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM11_Init-TIM11-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM11_Init-TIM11-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -169,12 +189,20 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
+SH.S_TIM2_CH1_ETR.ConfNb=1
 TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM1.ICFilter_CH1=2
 TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,ICFilter_CH1
 TIM1.Prescaler=99
 TIM11.IPParameters=Prescaler
 TIM11.Prescaler=99
+TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM2.ICFilter_CH1=2
+TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Prescaler,ICFilter_CH1
+TIM2.Prescaler=99
+TIM5.IPParameters=Prescaler
+TIM5.Prescaler=99
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
@@ -183,6 +211,10 @@ VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
 isbadioc=false
